# spotify-history

./: .gitignore  CLAUDE.md  Dockerfile  README.md  justfile  pyproject.toml  recently_played.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
infra/: locals.tf  main.tf  outputs.tf  terraform.tf  variables.tf
infra/modules/access/: main.tf  variables.tf
infra/modules/runtime_job/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  variables.tf
specs/: pipeline.md
src/spotify-history/: main.py
src/spotify_history/: __init__.py  __main__.py  etl.py  main.py
tests/: conftest.py  test_example.py
