[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_history"]

[project]
name = "spotify-history"
version = "0.1.0"
description = "A pipeline for collecting your listening history from Spotify."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.14.0",
    "polars>=1.38.1",
    "pyiceberg>=0.11.0",
    "python-dotenv>=1.2.1",
    "spotipy>=2.25.2",
]
authors = [
    { name = "Jack Werner", email = "jackwolfgangdj@gmail.com" },
]


[project.scripts]
spotify-history = "spotify_history.__main__:main"

[dependency-groups]
dev = ["pytest"]
lint = ["ruff", "mypy"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "FBT",
    "W",
    "C901",
    "ANN",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "T20",
    "PT",
    "RET",
    "SIM",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "I",
    "PD",
    "N",
    "D",
    "PL",
]
ignore = ["E501", "D203", "D213", "COM812"]

[tool.ruff.lint.flake8-import-conventions.aliases]
"pyspark.sql.functions" = "sf"

[tool.mypy]
strict = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
show_error_codes = true
pretty = true
show_column_numbers = true
exclude = [
  "build",
  "dist",
  "stubs",
  ".venv",
]

[[tool.mypy.overrides]]
module = ["spotipy", "spotipy.*"]
ignore_errors = true
follow_imports = "skip"
